resources/assets/styles/layouts/_home.scss
.utk-home {
  .utk-header-resources {
    display: block !important;
    position: static !important;
    max-height: none !important;
    height: auto !important;
    overflow: auto;
    padding-bottom: $golden-ratio-4 !important;
    z-index: auto !important;

    .utk-header-main-menu {
      padding-top: $golden-ratio-2;

      @include respond(xs, sm) {
        padding-top: 0 !important;
      }
    }

    @include respond(xs, sm) {
      padding-top: 0 !important;

      .utk-hours {
        display: none;
      }
    }
  }

  @include respond(xs, sm) {
    .utk-header-super .utk-menu-options {
      z-index: 1099;
    }
  }
}

#utk-lib-home-hours {
  display: none;

  @include respond(xs, sm) {
    display: block;

    .utk-hours {
      position: relative;
      z-index: 0;
      top: auto;
      left: auto;
    }
  }
}

body.home.page-id-393 {
  @include respond(xs, sm) {
    #utk-lib-midsection {
      margin-top: -$golden-ratio-4;
    }
  }
}

#utk-panel {
  min-height: $golden-ratio-7;
}

#utk-lib-home {
  min-height: $golden-ratio-9;
}

